# deafen

./: Cargo.toml  README.md
examples/: client.rs
src/: config.rs  error.rs  kernel.rs  lib.rs  main.rs  models.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/compute/: local.rs  mod.rs
src/services/: client_service.rs  mod.rs  scan_service.rs  utxo_service.rs
src/storage/: mdbx.rs  memory.rs  mod.rs
