[package]
name = "deafen"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.3", features = ["v4"] }
silentpayments = { path = "../rust-silentpayments" }
secp256k1 = { version = "0.27", features = ["rand-std"] }
rayon = "1.7"
rand = "0.8"
serde_with = "3.9.0"
hex = "0.4.3"
libmdbx = { version = "0.5.0", features = ["orm"] }
once_cell = "1.19.0"
bincode = "1.3.3"
tempfile = "3.12.0"
anyhow = "1.0.86"
envy = "0.4.2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[[example]]
name = "client"
path = "examples/client.rs"

[features]
default = ["memory_store"]
memory_store = []

[lib]
name = "deafen"
path = "src/lib.rs"

[[bin]]
name = "deafend"
path = "src/main.rs"
